--- a/styles.css
+++ b/styles.css
@@ -228,3 +228,20 @@ main {
 .currency-table--container .icon-up {
     background-image: url('./assets/icons/trending-up.svg');
 }
+
+.currency-table--date {
+    width: 190px;
+    height: 30px;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 8px;
+    background-color: var(--soft-orange);
+    border-radius: 8px;
+}
+
+.currency-table--date p {
+    font-size: 1.2rem;
+    font-weight: 300;
+    line-height: 1.5rem;
+    color: var(--warn-black)
+}
