--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,7 @@ main {
     color: #757575;
 }
 
-.main--currency-table {
+.main-table {
     width: 70%;
     min-width: 235px;
     max-width: 500px;
@@ -158,15 +158,22 @@ main {
     font-family: 'Inter', sans-serif;
 }
 
-.main--currency-table .currency-table--title {
+.main-table .table--title {
     margin-bottom: 15px;
     font-size: 1.8rem;
     font-weight: bold;
     line-height: 2.3rem;
+}
+
+.main-table .table--title.currency--title {
     color:var(--bitcoin-orange)
 }
 
-.currency-table--container {
+.main-table .table--title.fee--title {
+    color:var(--secondary-blue)
+}
+
+.table--container {
     width: 90%;
     min-width: 230px;
     max-width: 300px;
@@ -174,12 +181,12 @@ main {
     margin: 0 auto;
 }
 
-.currency-table--container table {
+.table--container table {
     width: 100%;
     height: 100%;
 }
 
-.currency-table--container td {
+.table--container td {
     width: 50%;
     font-size: 1.6rem;
     font-weight: 500;
@@ -188,30 +195,30 @@ main {
     background-color: var(--just-white);
 }
 
-.currency-table--container .table__top-left {
+.table--container .table__top-left {
     border-radius: 15px 0 0 0;
 }
 
-.currency-table--container .table__top-right {
+.table--container .table__top-right {
     border-radius: 0 15px 0 0;
 }
 
-.currency-table--container .table__bottom-right {
+.table--container .table__bottom-right {
     border-radius: 0 0 15px 0;
 }
 
-.currency-table--container .table__bottom-left {
+.table--container .table__bottom-left {
     border-radius: 0 0 0 15px;
 }
 
-.currency-table--container .table__right {
+.table--container .table__right {
     font-size: 1.4rem;
     font-weight: normal;
     line-height: 1.7rem;
     color: #757575;
 }
 
-.currency-table--container .icon {
+.table--container .icon {
     display: inline-block;
     width: 15px;
     height: 15px;
@@ -221,25 +228,32 @@ main {
     background-repeat: no-repeat;
 }
 
-.currency-table--container .icon-down {
+.table--container .icon-down {
     background-image: url('./assets/icons/trending-down.svg');
 }
 
-.currency-table--container .icon-up {
+.table--container .icon-up {
     background-image: url('./assets/icons/trending-up.svg');
 }
 
-.currency-table--date {
+.table--date {
     width: 190px;
     height: 30px;
     margin: 0 auto;
     margin-top: 15px;
     padding: 8px;
-    background-color: var(--soft-orange);
     border-radius: 8px;
 }
 
-.currency-table--date p {
+.table--date.currency--date {
+    background-color: var(--soft-orange);
+}
+
+.table--date.fee--date {
+    background-color: var(--soft-blue);
+}
+
+.table--date p {
     font-size: 1.2rem;
     font-weight: 300;
     line-height: 1.5rem;
