--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,8 @@ main {
 .table--container table {
     width: 100%;
     height: 100%;
+    box-shadow: 0px 4px 8px rgba(89,73,30,0.1);
+    border-radius: 15px;
 }
 
 .table--container td {
@@ -243,6 +245,7 @@ main {
     margin-top: 15px;
     padding: 8px;
     border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(89,73,30,0.1);
 }
 
 .table--date.currency--date {
@@ -303,3 +306,40 @@ main {
     color: #808080;
 }
 
+.product-detail--card {
+    width: 90%;
+    min-width: 288px;
+    max-width: 400px;
+    height: 150px;
+    margin: 15px auto;
+    padding: 15px;
+    background-color: var(--black);
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.16);
+}
+
+.product-detail--card .clock {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    margin-bottom: 10px;
+    background-image: url('./assets/icons/clock.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.product--card-title {
+    margin-bottom: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--just-white);
+}
+
+.product--card-body {
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
+}
