--- a/styles.css
+++ b/styles.css
@@ -149,8 +149,18 @@ main {
     color: #757575;
 }
 
+.main--tables-container {
+    display: flex;
+    height: 370px;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+    margin: 0 40px;
+ }
+
 .main-table {
     width: 70%;
+    scroll-snap-align: center;
     min-width: 235px;
     max-width: 500px;
     height: 360px;
